# clinkedlist

./: CMakeLists.txt  README.md
src/: linkedlist.c
